linked to inner pages. hover animations.

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                     <nav class="primary-nav">
                         <ul>
                             <li><a href="/">Home</a></li>
-                            <li><a href="/">About</a></li>
-                            <li><a href="/">Contact</a></li>
-                            <li><a href="/">Projects</a></li>
+                            <li><a href="/about.html">About</a></li>
+                            <li><a href="/contact.html">Contact</a></li>
+                            <li><a href="/projects.html">Projects</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -29,7 +29,7 @@
                 <div class="content">
                     <h1>Kristin Vaughn</h1>
                     <h2>Full-Stack Developer</h2>
-                    <a href="/" class="button"><span>My Projects</span></a>
+                    <a href="/projects.html" class="button"><span>My Projects</span></a>
                 </div>
             </div>
         </header>
@@ -88,7 +88,7 @@
             </section>
         </main>
         <footer>
-            <a href="/" class="button"><span>Contact Me</span></a>
+            <a href="/contact.html" class="button"><span>Contact Me</span></a>
         </footer>
     </div>
 </body>
