--- a/about.html
+++ b/about.html
@@ -3,9 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kristin Vaughn // About</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style/index.css">
 </head>
-<body>
-    <h1> ABOUT </h1>
+<body id="about">
+    <div id="wrapper">
+        <header>
+            <div class="top-bar">
+                <div class="container">
+                    <div class="logo">
+                        <a href="/"><img src="img/logo.png" alt="Logo"><span>Kristin Vaughn</span></a>
+                    </div>
+                    <nav class="primary-nav">
+                        <ul>
+                            <li><a href="/">Home</a></li>
+                            <li><a href="/about.html">About</a></li>
+                            <li><a href="/contact.html">Contact</a></li>
+                            <li><a href="/projects.html">Projects</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </header>
+        <main>
+            <section id="about-me">
+                <div class="container">
+                    <div class="left">
+                        <h1><span>Hello!</span>My name is Kristin Vaughn.</h1>
+                        <div class="line"></div>
+                        <p>I'm a full-stack web developer from Dearborn, MI.</p>
+                        <div class="social-links">
+                            <a href="https://github.com/knvaughn" target="_blank">
+                                <div class="social">
+                                    <i class="fab fa-github-alt"></i>
+                                </div>
+                            </a>
+                            <a href="https://www.instagram.com/vaughn.kristin.n/" target="_blank">
+                                <div class="social">
+                                    <i class="fab fa-instagram"></i>
+                                </div>
+                            </a>
+                            <a href="https://www.facebook.com/kristinnquick" target="_blank">
+                                <div class="social">
+                                    <i class="fab fa-facebook-f"></i>
+                                </div>
+                            </a>
+                            <a href="mailto:vaughn.kristin.n@gmail.com" target="_blank">
+                                <div class="social">
+                                    <i class="far fa-envelope"></i>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <p>I received my Associate's degree in Business from Washtenaw Community College, and then continued to take courses in Web Design and Development. Now I am studying Software Development at Lambda School.</p>
+                        <p>In my spare time I enjoy vegetable gardening, hiking and camping in the summer, and spending time with family. I'm also into a variety of science fiction and horror films and literature. On the weekends I'm typically working on a coding project, and I'm always continuing to develop my skills. Feel free to reach out!</p>
+                        <a href="/projects.html" class="button"><span>My Projects</span></a>
+                    </div>
+                </div>
+            </section>
+        </main>
+        <footer>
+            <a href="/contact.html" class="button"><span>Contact Me</span></a>
+        </footer>
+    </div>
 </body>
 </html>
