--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,82 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=    <h1> ABOUT </h1>, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kristin Vaughn // Contact</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style/index.css">
 </head>
-<body>
-    <h1> CONTACT </h1>
+<body id="contact">
+    <div id="wrapper">
+        <header>
+            <div class="top-bar">
+                <div class="container">
+                    <div class="logo">
+                        <a href="/"><img src="img/logo.png" alt="Logo"><span>Kristin Vaughn</span></a>
+                    </div>
+                    <nav class="primary-nav">
+                        <ul>
+                            <li><a href="/">Home</a></li>
+                            <li><a href="/about.html">About</a></li>
+                            <li><a href="/contact.html">Contact</a></li>
+                            <li><a href="/projects.html">Projects</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </header>
+        <main>
+            <section id="contact-me">
+                <div class="container">
+                    <div class="left">
+                        <h1><span>Questions? Comments?</span>Feel free to reach out.</h1>
+                        <div class="line"></div>
+                        <p><strong>Kristin Vaughn</strong></p>
+                        <p><em>Dearborn, MI</em></p>
+                        <div class="contact-links">
+                            <a href="tel:7343472453" target="_blank">
+                                <div class="contact">
+                                    <i class="fas fa-phone-alt"></i> 734-347-2453
+                                </div>
+                            </a>
+                            <a href="mailto:vaughn.kristin.n@gmail.com" target="_blank">
+                                <div class="contact">
+                                    <i class="far fa-envelope"></i> vaughn.kristin.n@gmail.com
+                                </div>
+                            </a>
+                        </div>
+                        <div class="social-links">
+                            <a href="https://github.com/knvaughn" target="_blank">
+                                <div class="social">
+                                    <i class="fab fa-github-alt"></i>
+                                </div>
+                            </a>
+                            <a href="https://www.instagram.com/vaughn.kristin.n/" target="_blank">
+                                <div class="social">
+                                    <i class="fab fa-instagram"></i>
+                                </div>
+                            </a>
+                            <a href="https://www.facebook.com/kristinnquick" target="_blank">
+                                <div class="social">
+                                    <i class="fab fa-facebook-f"></i>
+                                </div>
+                            </a>
+                            <a href="mailto:vaughn.kristin.n@gmail.com" target="_blank">
+                                <div class="social">
+                                    <i class="far fa-envelope"></i>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="profile-image"></div>
+                    </div>
+                    <div class="lines-left"></div>
+                    <div class="lines-right"></div>
+                </div>
+            </section>
+        </main>
+    </div>
 </body>
 </html>
