--- a/about.html
+++ b/about.html
@@ -14,14 +14,16 @@
             <div class="top-bar">
                 <div class="container">
                     <div class="logo">
-                        <a href="/"><img src="img/logo.png" alt="Logo"><span>Kristin Vaughn</span></a>
+                        <a href="./index.html"><img src="img/logo.png" alt="Logo"><span>Kristin Vaughn</span></a>
                     </div>
                     <nav class="primary-nav">
+                        <span class="toggle-menu"><i class="fas fa-bars"></i></span>
+                        <span class="close-menu"><i class="fas fa-times"></i></span>
                         <ul>
-                            <li><a href="/">Home</a></li>
-                            <li><a href="/about.html">About</a></li>
-                            <li><a href="/contact.html">Contact</a></li>
-                            <li><a href="/projects.html">Projects</a></li>
+                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="./about.html">About</a></li>
+                            <li><a href="./contact.html">Contact</a></li>
+                            <li><a href="./projects.html">Projects</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -60,14 +62,15 @@
                     <div class="right">
                         <p>I received my Associate's degree in Business from Washtenaw Community College, and then continued to take courses in Web Design and Development. Now I am studying Software Development at Lambda School.</p>
                         <p>In my spare time I enjoy vegetable gardening, hiking and camping in the summer, and spending time with family. I'm also into a variety of science fiction and horror films and literature. On the weekends I'm typically working on a coding project, and I'm always continuing to develop my skills. Feel free to reach out!</p>
-                        <a href="/projects.html" class="button"><span>My Projects</span></a>
+                        <a href="./projects.html" class="button"><span>My Projects</span></a>
                     </div>
                 </div>
             </section>
         </main>
         <footer>
-            <a href="/contact.html" class="button"><span>Contact Me</span></a>
+            <a href="./contact.html" class="button"><span>Contact Me</span></a>
         </footer>
     </div>
+    <script src="/js/main.js"> </script>
 </body>
 </html>
