--- a/contact.html
+++ b/contact.html
@@ -14,14 +14,16 @@
             <div class="top-bar">
                 <div class="container">
                     <div class="logo">
-                        <a href="/"><img src="img/logo.png" alt="Logo"><span>Kristin Vaughn</span></a>
+                        <a href="./index.html"><img src="img/logo.png" alt="Logo"><span>Kristin Vaughn</span></a>
                     </div>
                     <nav class="primary-nav">
+                        <span class="toggle-menu"><i class="fas fa-bars"></i></span>
+                        <span class="close-menu"><i class="fas fa-times"></i></span>
                         <ul>
-                            <li><a href="/">Home</a></li>
-                            <li><a href="/about.html">About</a></li>
-                            <li><a href="/contact.html">Contact</a></li>
-                            <li><a href="/projects.html">Projects</a></li>
+                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="./about.html">About</a></li>
+                            <li><a href="./contact.html">Contact</a></li>
+                            <li><a href="./projects.html">Projects</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -79,5 +81,6 @@
             </section>
         </main>
     </div>
+    <script src="/js/main.js"> </script>
 </body>
 </html>
