--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kristin Vaughn // Full-Stack Web Developer</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/index.css">
 </head>
@@ -13,14 +14,16 @@
             <div class="top-bar">
                 <div class="container">
                     <div class="logo">
-                        <a href="/"><img src="img/logo.png" alt="Logo"><span>Kristin Vaughn</span></a>
+                        <a href="./index.html"><img src="img/logo.png" alt="Logo"><span>Kristin Vaughn</span></a>
                     </div>
                     <nav class="primary-nav">
+                        <span class="toggle-menu"><i class="fas fa-bars"></i></span>
+                        <span class="close-menu"><i class="fas fa-times"></i></span>
                         <ul>
-                            <li><a href="/">Home</a></li>
-                            <li><a href="/about.html">About</a></li>
-                            <li><a href="/contact.html">Contact</a></li>
-                            <li><a href="/projects.html">Projects</a></li>
+                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="./about.html">About</a></li>
+                            <li><a href="./contact.html">Contact</a></li>
+                            <li><a href="./projects.html">Projects</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -29,7 +32,7 @@
                 <div class="content">
                     <h1>Kristin Vaughn</h1>
                     <h2>Full-Stack Developer</h2>
-                    <a href="/projects.html" class="button"><span>My Projects</span></a>
+                    <a href="./projects.html" class="button"><span>My Projects</span></a>
                 </div>
             </div>
         </header>
@@ -88,8 +91,9 @@
             </section>
         </main>
         <footer>
-            <a href="/contact.html" class="button"><span>Contact Me</span></a>
+            <a href="./contact.html" class="button"><span>Contact Me</span></a>
         </footer>
     </div>
+    <script src="/js/main.js"> </script>
 </body>
 </html>
