--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                         <a href="./index.html"><img src="img/logo.png" alt="Logo"><span>Kristin Vaughn</span></a>
                     </div>
                     <nav class="primary-nav">
-                        <span class="toggle-menu"><i class="fas fa-bars"></i></span>
-                        <span class="close-menu"><i class="fas fa-times"></i></span>
+                        <button class="toggle-menu" aria-label="Open Navigation Menu"><i class="fas fa-bars" aria-hidden="true"></i></button>
+                        <button class="close-menu" aria-label="Close Navigation Menu"><i class="fas fa-times" aria-hidden="true"></i></button>
                         <ul>
                             <li><a href="./index.html">Home</a></li>
                             <li><a href="./about.html">About</a></li>
