script tag update

--- a/contact.html
+++ b/contact.html
@@ -81,6 +81,6 @@
             </section>
         </main>
     </div>
-    <script src="/js/main.js"> </script>
+    <script src="js/main.js"> </script>
 </body>
 </html>
