--- a/projects.html
+++ b/projects.html
@@ -87,6 +87,6 @@
             <a href="./contact.html" class="button"><span>Contact Me</span></a>
         </footer>
     </div>
-    <script src="/js/main.js"> </script>
+    <script src="js/main.js"> </script>
 </body>
 </html>
